# easy-scraping

./: .tool-versions  README.md  pyproject.toml  requirements.txt
easy_scraping/: customscraper.py
