[tool.poetry]
name = "easy-scraping"
version = "0.1.0"
description = ""
authors = ["Alexander Foley <alexandergfoley@gmail.com>"]
readme = "README.md"
packages = [{include = "easy_scraping"}]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.9.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
